# flashcard

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  webpack.config.js
.github/workflows/: build.yml
buildfile/: PAT.md  build.py
flashcard/: lm.py  main.py
flashcard/templates/: main.html
